Config tweaks